Changelog
=========

0.1.3 (unreleased)
------------------

- added z3c.autoinclude entry point


0.1.2 (2010-12-28)
------------------

- Moved IGeoView from c.geo.contentlocations 


0.1.1 (2010-11-13)
------------------

- moved geocoderview to portal root


0.1 (2010-10-31)
----------------

* removed zgeo.geographer dependency
* zgeo.plone.geographer code refactoring 
* moved from zgeo.plone.geographer