@@ -30,6 +30,10 @@ setup(name='collective.geo.geographer',
           'geopy',
           # -*- Extra requirements: -*-
       ],
+      extras_require = {
+        'test': [
+            'Products.PloneTestCase']
+      },
       entry_points="""
       # -*- Entry points: -*-
       [z3c.autoinclude.plugin]
